# opencv-lab

./: .gitignore  AppIcon.icns  CMakeLists.txt  README.md
src/: batchwindow.cpp  batchwindow.h  cv_helpers.h  helpers.cpp  helpers.h  idocr.cpp  idocr.h  imageoperations.cpp  imageoperations.h  main.cc  mainwindow.cc  mainwindow.h  myfreenectdevice.cpp  myfreenectdevice.h  webcam.cpp  webcam.h
ui/: batchwindow.ui  mainwindow.ui
